--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Apprends à Lire</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+
     <style>
         body {
             background-color: #f8f9fa;
@@ -127,6 +130,7 @@
     </style>
 </head>
 <body>
+    <div id="header"></div>
     <div class="celebration" id="celebration"></div>
 
     <div class="app-container">
@@ -164,9 +168,24 @@
             </button>
         </div>
     </div>
+    <div id="footer"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
     <script>
+
+         // Chargement du header
+         fetch('includes/header.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('header').innerHTML = data;
+            });
+
+        // Chargement du footer
+        fetch('includes/footer.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('footer').innerHTML = data;
+            });
         // Données des questions
         const questions = [
     {
