header-footer + words

--- a/dicte2.html
+++ b/dicte2.html
@@ -6,6 +6,8 @@
     <title>Application de Dictée</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <style>
         body {
             background-color: #f8f9fa;
@@ -138,6 +140,7 @@
     </style>
 </head>
 <body>
+    <div id="header"></div>
     <div class="container dictee-container">
         <h1 class="text-center mb-4">Application de Dictée</h1>
         
@@ -358,6 +361,11 @@
             </div>
         </div>
     </div>
+
+    <div id="footer"></div>     
+    <script src="/js/loadheaderfooter.js"></script>
+
+
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
