--- a/index.html
+++ b/index.html
@@ -169,23 +169,10 @@
         </div>
     </div>
     <div id="footer"></div>
+    <script src="/js/loadheaderfooter.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
     <script>
-
-         // Chargement du header
-         fetch('includes/header.html')
-            .then(response => response.text())
-            .then(data => {
-                document.getElementById('header').innerHTML = data;
-            });
-
-        // Chargement du footer
-        fetch('includes/footer.html')
-            .then(response => response.text())
-            .then(data => {
-                document.getElementById('footer').innerHTML = data;
-            });
         // Données des questions
         const questions = [
     {
