--- a/alphabetik.html
+++ b/alphabetik.html
@@ -6,7 +6,8 @@
   <title>Lecture de mots en français</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-  
+  <link href="css/style.css" rel="stylesheet">
+
   <style>
     :root {
       --primary: #6366f1;
@@ -192,6 +193,7 @@
   </style>
 </head>
 <body>
+  <div id="header"></div>
   <div class="app-header text-center">
     <div class="container">
       <h1 class="app-title">Lecture de mots en français</h1>
@@ -244,6 +246,12 @@
       </div>
     </div>
   </div>
+
+  <div id="footer"></div>
+    <script src="/js/loadheaderfooter.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+
+
 
   <script>
     let donnees = {};
