--- a/compter.html
+++ b/compter.html
@@ -6,6 +6,8 @@
   <title>Compteur Vocal Professionnel</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link href="css/style.css" rel="stylesheet">
+
   <style>
     :root {
       --primary-color: #4361ee;
@@ -190,6 +192,7 @@
   </style>
 </head>
 <body>
+    <div id="header"></div>
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-8 col-lg-6">
@@ -289,6 +292,11 @@
       </div>
     </div>
   </div>
+
+  <div id="footer"></div>
+    <script src="/js/loadheaderfooter.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+
 
   <script>
     document.addEventListener('DOMContentLoaded', function() {
