--- a/dicte2.html
+++ b/dicte2.html
@@ -362,8 +362,9 @@
         </div>
     </div>
 
-    <div id="footer"></div>     
+    <div id="footer"></div>
     <script src="/js/loadheaderfooter.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 
 
 
